Bug 1817248 - Use an appropriate frecency bucket for unvisited bookmarks. r=daisuke, a=dmeehan

Rather than giving all bookmarks the same ranking score (differentiating only
by typed), retrieve the most recent bookmark date, and use an appropriate
frecency age bucket.
This should ensure more recently created bookmarks are scored higher.

Differential Revision: https://phabricator.services.mozilla.com/D170781