toolkit/components/places/Database.h
@@ -18,7 +18,7 @@
 
 // This is the schema version. Update it at any schema change and add a
 // corresponding migrateVxx method below.
-#define DATABASE_SCHEMA_VERSION 71
+#define DATABASE_SCHEMA_VERSION 72
 
 // Fired after Places inited.
 #define TOPIC_PLACES_INIT_COMPLETE "places-init-complete"
@@ -317,6 +317,7 @@ class Database final : public nsIObserver, public nsSupportsWeakReference {
   nsresult MigrateV69Up();
   nsresult MigrateV70Up();
   nsresult MigrateV71Up();
+  nsresult MigrateV72Up();
 
   void MigrateV52OriginFrecencies();
 
