toolkit/components/places/tests/migration/head_migration.js
@@ -13,7 +13,7 @@
 
 // Put any other stuff relative to this test folder below.
 
-const CURRENT_SCHEMA_VERSION = 71;
+const CURRENT_SCHEMA_VERSION = 72;
 const FIRST_UPGRADABLE_SCHEMA_VERSION = 43;
 
 async function assertAnnotationsRemoved(db, expectedAnnos) {
